<resources>
    <string name="app_name">KalkuLori</string>
    <string name="BMR_intro">BMR adalah kebutuhan kalori minimal yang dipakai organ-organ tubuh untuk melakukan tugas dasarnya. Ini meliputi pernapasan, sirkulasi, dan produksi sel. Prosesnya dikenal sebagai metabolisme. Dengan memenuhi BMR, tubuh dapat tumbuh dan berfungsi dengan baik. Pada umumnya kalori yang dibutuhkan sebesar 2500 kalori/hari untuk laki-laki dewasa dan 2000 kalori/hari untuk wanita dewasa.</string>
    <string name="berat_badan">Berat Badan (kg)</string>
    <string name="tinggi_badan">Tinggi Badan (cm)</string>
    <string name="usia">Usia</string>
    <string name="jenis_kelamin">Jenis kelamin</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="hitung">Hitung</string>
    <string name="reset">Reset</string>
    <string name="berat_invalid">Berat Badan tidak boleh kosong!</string>
    <string name="tinggi_invalid">Tinggi Badan tidak boleh kosong!</string>
    <string name="usia_invalid">Usia tidak boleh kosong!</string>
    <string name="bmr_x">BMR Anda: %1$.2f</string>
    <string name="keterangan">Setiap orang memiliki kebutuhan kalori yang berbeda sesuai kondisi tubuhnya, namun jumlah kalori yang telah disebutkan merupakan patokan bagi anda.</string>
    <string name="rendah">Rendah</string>
    <string name="tinggi">Tinggi</string>
    <string name="kategori_kalori">Kategori Kebutuhan Kalori: %1$s</string>
    <string name="judul_rendah">Rekomendasi Asupan</string>
    <string name="judul_tinggi">Rekomendasi Asupan</string>
    <string name="saran_rendah">
        Untuk jumlah kalori Anda, dianjurkan asupan menu berikut dalam sehari:
        \n
        Sarapan:\n
        2 lembar roti gandum dan 1 sendok makan selai kacang.\n
        4 butir telur rebus.\n
        1 buah jeruk kecil.\n
        250 gram yogurt rendah lemak.\n
        \n
        Makan Siang:\n
        250 gram dada ayam panggang.\n
        1 mangkuk kecil nasi merah.\n
        80 gram brokolo rebus.\n
        \n
        Makan Malam:\n
        250 gram daging ayam/sapi rendah lemak.\n
        70 gram jamur tumis dengan bawang, cabai, dan 2 sendok minyak zaitun.\n
        90 gram pasta gandum.\n
    </string>
    <string name="saran_tinggi">
        Untuk jumlah kalori Anda, dianjurkan asupan menu berikut dalam sehari:
        \n
        Sarapan:\n
        Nasi 1 porsi kira-kira 105 gram sebanyak 135 kalori.\n
        Dada ayam goreng 1 potong ukuran sedang sebanyak 200 kalori.\n
        Sayur sop 1 mangkuk sebanyak 70 kalori.\n
        Cemilan pudding coklat kira-kira 112 gram sebanyak 157 kalori.\n
        Susu full cream kira-kira 1 gelas (250 ml) sebanyak 120 kalori.\n
        \n
        Makan Siang:\n
        Sate ayam 1 porsi dengan lontong sebanyak 681 kalori.\n
        Cemilan rujak 1 porsi kira-kira 200 gram sebanyak 243 kalori.\n
        \n
        Makan Malam:\n
        Nasi goreng ayam 1 mangkuk sebanyak 329 kalori.\n
        Dada ayam goreng 1 potong ukuran sedang sebanyak 200 kalori.\n
        Salad buah dengan dressing mayonnaise 1 porsi sebanyak 250 kalori.\n
        Susu full cream kira-kira 1 gelas (250 ml) sebanyak 120 kalori.\n
    </string>
    <string name="lihat_saran">Lihat Saran</string>
    <string name="share">Share</string>
    <string name="share_template">Berat badan: %1$s kg\nTinggi badan: %2$s cm\nUsia: %3$s\nJenis kelamin: %4$s\n\n%5$s\n%6$s</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="copyright">%1$s</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="history">History</string>
    <string name="hasil_x">Kalori: %1$.2f - %2$s</string>
    <string name="data_x">BB: %1$.1f - TB: %2$.1f - Usia: %3$.1f - %4$s</string>
    <string name="hapus_history">Hapus History</string>
    <string name="konfirmasi_hapus">Hapus semua history?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="koneksi_error">Koneksi Error</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data otomatis</string>
    <string name="notif_title">Kalori Reminder!</string>
    <string name="notif_text">Jangan lupa untuk cek kalorimu lagi yaa...</string>

</resources>